--- a/translations/season+intl-icu.es.xlf
+++ b/translations/season+intl-icu.es.xlf
@@ -156,5 +156,16 @@
         <target>Saison 0.0</target>
       </segment>
     </unit>
+    <unit id="PicVFb9" name="Saison 0.15">
+      <notes>
+        <note category="german">Beta</note>
+        <note category="from">db://Season</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Saison 0.15</source>
+        <target>Saison 0.15</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
