--- a/translations/soul+intl-icu.en.xlf
+++ b/translations/soul+intl-icu.en.xlf
@@ -3869,5 +3869,25 @@
         <target>Imported Distinctions</target>
       </segment>
     </unit>
+    <unit id="YHwfxav" name="Beta-Saison">
+      <notes>
+        <note category="german">Beta-Saison</note>
+        <note category="from">twig:///templates/ajax/soul/me.html.twig;twig:///templates/ajax/soul/season.html.twig;twig:///templates/ajax/soul/shell.html.twig;twig:///templates/ajax/soul/visit.html.twig</note>
+      </notes>
+      <segment>
+        <source>Beta-Saison</source>
+        <target>Beta Season</target>
+      </segment>
+    </unit>
+    <unit id="ykRbs.i" name="&lt;span class=&quot;number&quot;&gt;Beta&lt;/span&gt; Saison">
+      <notes>
+        <note category="german">&lt;span class="number"&gt;Beta&lt;/span&gt; Saison</note>
+        <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
+      </notes>
+      <segment>
+        <source>&lt;span class="number"&gt;Beta&lt;/span&gt; Saison</source>
+        <target><![CDATA[<span class="number">Beta</span> Season]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
