FR Translation for labo popup

--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -19589,7 +19589,7 @@
       </notes>
       <segment>
         <source>Dafür solltest du dein Labor verwenden...</source>
-        <target>Dafür solltest du dein Labor verwenden...</target>
+        <target>Vous devriez plutôt utiliser votre Laboratoire personnel pour faire ça...</target>
       </segment>
     </unit>
     <unit id="34H3lrM" name="{citizen} bitten etwas aufzuheben.">
