--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -898,7 +898,7 @@
       </notes>
       <segment>
         <source>'Wake The Dead'</source>
-        <target>"Debout-les-morts"</target>
+        <target>« Debout-les-morts »</target>
       </segment>
     </unit>
     <unit id="wiaY28_" name="Heißer Kaffee">
