--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -3661,7 +3661,7 @@
       </notes>
       <segment>
         <source>Das Zombie Survival Game!</source>
-        <target>Das Zombie Survival Game!</target>
+        <target>¡El juego de supervivencia de zombies!</target>
       </segment>
     </unit>
   </file>
