--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -3844,7 +3844,7 @@
       </notes>
       <segment>
         <source>Beta-Saison</source>
-        <target>Beta-Saison</target>
+        <target>Temporada Beta</target>
       </segment>
     </unit>
     <unit id="ykRbs.i" name="&lt;span class=&quot;number&quot;&gt;Beta&lt;/span&gt; Saison">
@@ -3855,7 +3855,7 @@
       </notes>
       <segment>
         <source>&lt;span class="number"&gt;Beta&lt;/span&gt; Saison</source>
-        <target><![CDATA[<span class="number">Beta</span> Saison]]></target>
+        <target><![CDATA[Temporada <span class="number">Beta</span>]]></target>
       </segment>
     </unit>
   </file>
