ES Translation, Gazette

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -18281,7 +18281,7 @@
       </notes>
       <segment>
         <source>Unglücklicherweise ist deine Stadt vollkommen im Wüstensand versunken... Die Gemeinschaft wurde ausgelöscht.</source>
-        <target>Unglücklicherweise ist deine Stadt vollkommen im Wüstensand versunken... Die Gemeinschaft wurde ausgelöscht.</target>
+        <target>Desafortunadamente, tu pueblo está completamente sumergida en las arenas del desierto... La comunidad ha sido aniquilada.</target>
       </segment>
     </unit>
     <unit id="Goz9BWd" name="(Allein)">
